--- a/clients/java/client/pom.xml
+++ b/clients/java/client/pom.xml
@@ -90,6 +90,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.operaton.bpm</groupId>
+      <artifactId>operaton-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.operaton.spin</groupId>
       <artifactId>operaton-spin-dataformat-all</artifactId>
       <scope>test</scope>
@@ -100,19 +105,6 @@
       <version>${project.version}</version>
       <classifier>classes</classifier>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.operaton.bpm.tomcat</groupId>
-      <artifactId>operaton-tomcat-assembly</artifactId>
-      <version>${project.version}</version>
-      <type>tar.gz</type>
-      <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <artifactId>slf4j-api</artifactId>
-          <groupId>org.slf4j</groupId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.operaton.bpm</groupId>
@@ -170,39 +162,6 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>reserve-ports</id>
-            <phase>initialize</phase>
-            <goals>
-              <goal>reserve-network-port</goal>
-            </goals>
-            <configuration>
-              <skip>${skipTests}</skip>
-              <portNames>
-                <portName>tomcat.connector.http.port</portName>
-                <portName>tomcat.connector.ajp.port</portName>
-              </portNames>
-            </configuration>
-          </execution>
-          <execution>
-            <id>add-it-source</id>
-            <phase>generate-test-sources</phase>
-            <goals>
-              <goal>add-test-source</goal>
-            </goals>
-            <configuration>
-              <sources>
-                <source>src/it/java</source>
-              </sources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
         <artifactId>maven-resources-plugin</artifactId>
         <version>3.4.0</version>
         <executions>
@@ -237,149 +196,6 @@
           <trimStackTrace>false</trimStackTrace>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>unpack</goal>
-            </goals>
-            <configuration>
-              <skip>${skipTests}</skip>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>org.operaton.bpm.tomcat</groupId>
-                  <artifactId>operaton-tomcat-assembly</artifactId>
-                  <version>${project.version}</version>
-                  <type>tar.gz</type>
-                  <outputDirectory>${engine.runtime}</outputDirectory>
-                  <overWrite>true</overWrite>
-                </artifactItem>
-              </artifactItems>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <configuration>
-          <redirectTestOutputToFile>true</redirectTestOutputToFile>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>integration-test</goal>
-              <goal>verify</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.cargo</groupId>
-        <artifactId>cargo-maven3-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>start-container</id>
-            <phase>pre-integration-test</phase>
-            <goals>
-              <goal>start</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>stop-container</id>
-            <phase>post-integration-test</phase>
-            <goals>
-              <goal>stop</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <skip>${skipTests}</skip>
-          <!-- Container configuration -->
-          <container>
-            <type>installed</type>
-            <containerId>tomcat11x</containerId>
-            <append>false</append>
-            <home>${tomcat.runtime}</home>
-            <timeout>${cargo.timeout}</timeout>
-            <log>${tomcat.runtime}/logs/catalina.out</log>
-            <dependencies>
-              <dependency>
-                <group-id>jakarta.xml.bind</group-id>
-                <artifact-id>jakarta.xml.bind-api</artifact-id>
-                <type>jar</type>
-              </dependency>
-              <!-- required by PaSerializationIT -->
-              <dependency>
-                <groupId>jakarta.activation</groupId>
-                <artifactId>jakarta.activation-api</artifactId>
-                <type>jar</type>
-              </dependency>
-              <dependency>
-                <groupId>org.glassfish.jaxb</groupId>
-                <artifactId>jaxb-core</artifactId>
-                <type>jar</type>
-              </dependency>
-              <dependency>
-                <groupId>org.glassfish.jaxb</groupId>
-                <artifactId>jaxb-runtime</artifactId>
-                <type>jar</type>
-              </dependency>
-              <dependency>
-                <groupId>com.sun.istack</groupId>
-                <artifactId>istack-commons-runtime</artifactId>
-                <type>jar</type>
-              </dependency>
-              <!-- required by ClientIT -->
-              <dependency>
-                <groupId>org.graalvm.sdk</groupId>
-                <artifactId>nativeimage</artifactId>
-              </dependency>
-            </dependencies>
-          </container>
-          <configuration>
-            <type>standalone</type>
-            <home>${project.build.directory}/cargo-config-tomcat</home>
-            <properties>
-              <cargo.servlet.port>${tomcat.connector.http.port}</cargo.servlet.port>
-              <cargo.tomcat.ajp.port>${tomcat.connector.ajp.port}</cargo.tomcat.ajp.port>
-              <cargo.start.jvmargs>-Djava.security.egd=file:/dev/./urandom</cargo.start.jvmargs>
-              <cargo.start.jvmargs>${cargo.start.jvmargs}</cargo.start.jvmargs>
-            </properties>
-            <files>
-              <copy>
-                <configfile>true</configfile>
-                <file>${project.basedir}/src/it/resources/tomcat/bpm-platform.xml</file>
-                <tofile>conf/bpm-platform.xml</tofile>
-                <overwrite>true</overwrite>
-              </copy>
-            </files>
-          </configuration>
-          <deployables>
-            <deployable>
-              <groupId>org.operaton.bpm</groupId>
-              <artifactId>operaton-engine-rest</artifactId>
-              <type>war</type>
-              <classifier>tomcat</classifier>
-              <pingURL>
-                http://localhost:${tomcat.connector.http.port}/engine-rest/engine/default/process-definition
-              </pingURL>
-              <pingTimeout>${cargo.deploy.timeout}</pingTimeout>
-              <properties>
-                <context>engine-rest</context>
-              </properties>
-            </deployable>
-            <deployable>
-              <groupId>org.operaton.bpm.qa</groupId>
-              <artifactId>engine-variable-test</artifactId>
-              <type>war</type>
-            </deployable>
-          </deployables>
-        </configuration>
-      </plugin>
     </plugins>
     <testResources>
       <testResource>
@@ -401,6 +217,206 @@
           -Djava.awt.headless=true
         </cargo.start.jvmargs>
       </properties>
+    </profile>
+    <profile>
+      <id>integration-test-external-task-client</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.operaton.bpm.tomcat</groupId>
+          <artifactId>operaton-tomcat-assembly</artifactId>
+          <version>${project.version}</version>
+          <type>tar.gz</type>
+          <scope>test</scope>
+          <exclusions>
+            <exclusion>
+              <artifactId>slf4j-api</artifactId>
+              <groupId>org.slf4j</groupId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>reserve-ports</id>
+                <phase>initialize</phase>
+                <goals>
+                  <goal>reserve-network-port</goal>
+                </goals>
+                <configuration>
+                  <skip>${skipTests}</skip>
+                  <portNames>
+                    <portName>tomcat.connector.http.port</portName>
+                    <portName>tomcat.connector.ajp.port</portName>
+                  </portNames>
+                </configuration>
+              </execution>
+              <execution>
+                <id>add-it-source</id>
+                <phase>generate-test-sources</phase>
+                <goals>
+                  <goal>add-test-source</goal>
+                </goals>
+                <configuration>
+                  <sources>
+                    <source>src/it/java</source>
+                  </sources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>generate-resources</phase>
+                <goals>
+                  <goal>unpack</goal>
+                </goals>
+                <configuration>
+                  <skip>${skipTests}</skip>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.operaton.bpm.tomcat</groupId>
+                      <artifactId>operaton-tomcat-assembly</artifactId>
+                      <version>${project.version}</version>
+                      <type>tar.gz</type>
+                      <outputDirectory>${engine.runtime}</outputDirectory>
+                      <overWrite>true</overWrite>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <configuration>
+              <redirectTestOutputToFile>true</redirectTestOutputToFile>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>integration-test</goal>
+                  <goal>verify</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.cargo</groupId>
+            <artifactId>cargo-maven3-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>start-container</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>start</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>stop-container</id>
+                <phase>post-integration-test</phase>
+                <goals>
+                  <goal>stop</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <skip>${skipTests}</skip>
+              <!-- Container configuration -->
+              <container>
+                <type>installed</type>
+                <containerId>tomcat11x</containerId>
+                <append>false</append>
+                <home>${tomcat.runtime}</home>
+                <timeout>${cargo.timeout}</timeout>
+                <log>${tomcat.runtime}/logs/catalina.out</log>
+                <dependencies>
+                  <dependency>
+                    <group-id>jakarta.xml.bind</group-id>
+                    <artifact-id>jakarta.xml.bind-api</artifact-id>
+                    <type>jar</type>
+                  </dependency>
+                  <!-- required by PaSerializationIT -->
+                  <dependency>
+                    <groupId>jakarta.activation</groupId>
+                    <artifactId>jakarta.activation-api</artifactId>
+                    <type>jar</type>
+                  </dependency>
+                  <dependency>
+                    <groupId>org.glassfish.jaxb</groupId>
+                    <artifactId>jaxb-core</artifactId>
+                    <type>jar</type>
+                  </dependency>
+                  <dependency>
+                    <groupId>org.glassfish.jaxb</groupId>
+                    <artifactId>jaxb-runtime</artifactId>
+                    <type>jar</type>
+                  </dependency>
+                  <dependency>
+                    <groupId>com.sun.istack</groupId>
+                    <artifactId>istack-commons-runtime</artifactId>
+                    <type>jar</type>
+                  </dependency>
+                  <!-- required by ClientIT -->
+                  <dependency>
+                    <groupId>org.graalvm.sdk</groupId>
+                    <artifactId>nativeimage</artifactId>
+                  </dependency>
+                </dependencies>
+              </container>
+              <configuration>
+                <type>standalone</type>
+                <home>${project.build.directory}/cargo-config-tomcat</home>
+                <properties>
+                  <cargo.servlet.port>${tomcat.connector.http.port}</cargo.servlet.port>
+                  <cargo.tomcat.ajp.port>${tomcat.connector.ajp.port}</cargo.tomcat.ajp.port>
+                  <cargo.start.jvmargs>-Djava.security.egd=file:/dev/./urandom</cargo.start.jvmargs>
+                  <cargo.start.jvmargs>${cargo.start.jvmargs}</cargo.start.jvmargs>
+                </properties>
+                <files>
+                  <copy>
+                    <configfile>true</configfile>
+                    <file>${project.basedir}/src/it/resources/tomcat/bpm-platform.xml</file>
+                    <tofile>conf/bpm-platform.xml</tofile>
+                    <overwrite>true</overwrite>
+                  </copy>
+                </files>
+              </configuration>
+              <deployables>
+                <deployable>
+                  <groupId>org.operaton.bpm</groupId>
+                  <artifactId>operaton-engine-rest</artifactId>
+                  <type>war</type>
+                  <classifier>tomcat</classifier>
+                  <pingURL>
+                    http://localhost:${tomcat.connector.http.port}/engine-rest/engine/default/process-definition
+                  </pingURL>
+                  <pingTimeout>${cargo.deploy.timeout}</pingTimeout>
+                  <properties>
+                    <context>engine-rest</context>
+                  </properties>
+                </deployable>
+                <deployable>
+                  <groupId>org.operaton.bpm.qa</groupId>
+                  <artifactId>engine-variable-test</artifactId>
+                  <type>war</type>
+                </deployable>
+              </deployables>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 </project>
