chore(ci): Move qa modules to 'distro' profile

--- a/clients/java/client/pom.xml
+++ b/clients/java/client/pom.xml
@@ -219,7 +219,7 @@
       </properties>
     </profile>
     <profile>
-      <id>integration-test-external-task-client</id>
+      <id>distro</id>
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
