--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -446,31 +446,35 @@ jobs:
       - name: Check out the code
         uses: actions/checkout@v6
         with:
-          fetch-depth: 0
+          fetch-depth: 1
       - uses: actions/setup-java@v4
         with:
           distribution: zulu
           java-version: 17
       - name: Import GPG key
+        shell: bash
         run: |
           echo "$GPG_SECRET_KEY" | gpg --batch --import
           gpg --list-secret-keys --keyid-format LONG
         env:
           GPG_SECRET_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-      - name: Deploy to Maven Central
+      - name: Create settings.xml
+        shell: bash
         run: |
           cat > .mvn/settings.xml <<EOF
           <settings>
-            <servers>
-              <server>
-                <id>central</id>
-                <username>${{ secrets.OSSRH_USERNAME2 }}</username>
-                <password>${{ secrets.OSSRH_PASSWORD2 }}</password>
-              </server>
-            </servers>
+          <servers>
+           <server>
+             <id>central</id>
+             <username>${{ secrets.OSSRH_USERNAME2 }}</username>
+             <password>${{ secrets.OSSRH_PASSWORD2 }}</password>
+           </server>
+          </servers>
           </settings>
           EOF
-          ./mvnw deploy -DskipTests -s ./.mvn/settings.xml -Psonatype-oss-release
+      - name: Deploy to Maven Central
+        run: |
+          ./mvnw deploy -DskipTests -s ./.mvn/settings.xml -Psonatype-oss-snapshot,-distro
         env:
           MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
