--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -79,6 +79,7 @@ on:
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/PULL_REQUEST_TEMPLATE/**'
       - '.github/dependabot.yml'
+      - '.github/workflows/auto-merge.yml'
       - '**/*.md'
       - 'distro/**'
       - 'settings/**'
@@ -98,6 +99,7 @@ on:
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/PULL_REQUEST_TEMPLATE/**'
       - '.github/dependabot.yml'
+      - '.github/workflows/auto-merge.yml'
       - '**/*.md'
       - 'distro/**'
       - 'settings/**'
