chore(ci): Make snapshot deployment on successful integration tests

--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -438,6 +438,7 @@ jobs:
     name: Deploy Snapshots
     needs:
       - build
+      - integration-tests
     runs-on: ubuntu-latest
     if: |
       always() && !cancelled() && (
