chore(ci): Ignore auto-merge.config.yml on push/pull_request

--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -99,7 +99,7 @@ on:
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/PULL_REQUEST_TEMPLATE/**'
       - '.github/dependabot.yml'
-      - '.github/workflows/auto-merge.yml'
+      - '.github/auto-merge.config.yml'
       - '**/*.md'
       - 'distro/**'
       - 'settings/**'
