--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ on:
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/PULL_REQUEST_TEMPLATE/**'
       - '.github/dependabot.yml'
-      - '.github/workflows/auto-merge.yml'
+      - '.github/auto-merge.config.yml'
       - '**/*.md'
       - 'distro/**'
       - 'settings/**'
@@ -32,6 +32,7 @@ on:
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/PULL_REQUEST_TEMPLATE/**'
       - '.github/dependabot.yml'
+      - '.github/auto-merge.config.yml'
       - '**/*.md'
       - 'distro/**'
       - 'settings/**'
